<resources>
    <string name="app_name">NotesHolder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="holder_name">Notes list</string>
    <string name="settngs_text">Supposed that there are many settings (like \'theme choose\', \'quantity of notes\' etc.) in this fragment</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="notesholder">NotesHolder</string>
    <string name="made_by">Made by Bedin A.A.</string>
    <string name="instructions">Instructions</string>
    <string name="for_editing">is for editing selected note</string>
    <string name="for_safe">is for safe changes in the note</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="new_name">New name</string>
    <string name="new_date">New date</string>
    <string name="add_new_note">add new Note</string>
    <string name="clear_all">clear all</string>
    <string name="change">change</string>
    <string name="delete">delete</string>
    <string name="list_name">List</string>
</resources>