<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_name_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_name"
        android:textSize="@dimen/text_size"
        android:textAlignment="center"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/text_view_date_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_date"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/inputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false"
        android:datePickerMode="spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/cancel_button"
            android:textSize="@dimen/question_button"/>

        <Button
            android:id="@+id/button_submit"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/submit_button"
            android:textSize="@dimen/question_button"/>
    </LinearLayout>

</LinearLayout>