<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_info"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            app:srcCompat="@android:drawable/ic_input_get" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_start"
            android:text="@string/notesholder"
            android:textSize="@dimen/settings_main_text"
            android:textColor="@color/settings_main_text_color"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_start"
        android:text="@string/made_by"
        android:textSize="@dimen/settings_text_size"
        android:textStyle="italic"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_start"
        android:text="@string/instructions"
        android:textSize="@dimen/settings_text_size"
        android:textStyle="bold|italic"
        android:textColor="@color/settings_text_color"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_start"
            app:srcCompat="@android:drawable/ic_menu_edit"  />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/settings_margin_start"
            app:srcCompat="@android:drawable/button_onoff_indicator_off"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_margin_start"
            android:text="@string/for_editing"
            android:textSize="@dimen/settings_taxt_size"
            android:textStyle="bold|italic"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/margin_start"
            app:srcCompat="@android:drawable/ic_menu_save"  />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/settings_margin_start"
            app:srcCompat="@android:drawable/button_onoff_indicator_off"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_margin_start"
            android:text="@string/for_safe"
            android:textSize="@dimen/settings_taxt_size"
            android:textStyle="bold|italic"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>